<resources>
    <string name="app_name">Breadcrumbs</string>
    <string name="go_on_a_trip">Go On A Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="timer">Timer</string>
    <string name="search_for_person">Search For Person</string>
    <string name="title_activity_search_map">Map</string>
    <string name="where_are_you_going">Where Are You Going?</string>
    <string name="set_route">Set Route</string>
    <string name="title_activity_set_route">Map</string>
    <string name="start_point">Start Point</string>
    <string name="intermediate_point">Intermediate Point</string>
    <string name="end_point">End Point</string>
    <string name="save_route">Save Route</string>
    <string name="any_additional_notes">Any Additional Notes?</string>
    <string name="contact_friends">Contacts</string>
    <string name="contact_authorities">Authorities</string>
    <string name="preferences">Preferences</string>
    <string name="phoneNumber">Enter phone number</string>
    <string name="Add">Add</string>
    <string name="None">None</string>
</resources>
